@@ -5,12 +5,24 @@ import java.util.*;
  */
 public class Deck {
     private List<Card> deck;
+    private final boolean isCustom;
 
     /**
-     * Initiates deck.
+     * Initiates standard 52-card deck and shuffles it.
      */
     public Deck() {
+        this.isCustom = false;
         initDeck();
+    }
+
+    /**
+     * Initiates deck with a pre-formed (custom) sequence of cards for testing or deterministic games.
+     *
+     * @param customDeck Pre-defined list of cards to be used in order.
+     */
+    public Deck(List<Card> customDeck) {
+        this.isCustom = true;
+        this.deck = new ArrayList<>(customDeck);
     }
 
     /**
@@ -19,7 +31,7 @@ public class Deck {
     private void initDeck() {
         deck = new ArrayList<>();
         for (Suits suit : Suits.values()) {
-            for (ValueToSuit value : ValueToSuit.values()) {
+            for (Rank value : Rank.values()) {
                 deck.add(new Card(value, suit));
             }
         }
@@ -39,8 +51,11 @@ public class Deck {
      */
     public Card pickCard() {
         if (deck.isEmpty()) {
+            if (isCustom) {
+                throw new IllegalStateException("Pre-formed deck is empty!");
+            }
             initDeck();
         }
-        return deck.remove(deck.size() - 1);
+        return deck.removeLast();
     }
 }
